<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTactivate"
        android:textSize="14sp" />

    <Button
        android:id="@+id/BtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/mTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/mensaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/introduce"
            android:inputType="text" />

        <Button
            android:id="@+id/SendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

    <TextView
        android:id="@+id/textMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54" />

    <Button
        android:id="@+id/DiscButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover" />

    <TextView
        android:id="@+id/BTlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:textSize="16sp" />
    
    <ListView
        android:id="@+id/ListBTs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >
    </ListView>
    
</LinearLayout>